--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="pixi.min.js"></script>
 </head>
 <body>
-    <script src="functions.js"></script>
+    <script src="mvtfunctions.js"></script>
+    <script src="characters/players.js"></script>
     <script src="game.js"></script>    
 </body>
 </html>
