--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <script src="pixi.min.js"></script>
 </head>
 <body>
-    <script src="mvtfunctions.js"></script>
-    <script src="characters/players.js"></script>
-    <script src="game.js"></script>    
+    <script type="module" src="game.js"></script>    
 </body>
 </html>
